--- a/DemoProject/Web.config
+++ b/DemoProject/Web.config
@@ -12,11 +12,12 @@
 
   </connectionStrings>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"  />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+    <trace enabled="true"/>
   </system.web>
   <system.codedom>
     <compilers>
